Resolves: fdo#86662 don't crash on docx load

ok in master, so just don't crash in 4-3 series

Change-Id: I2dcb7b0434341ff8058bdbdfc065ad08bd0600bc
Reviewed-on: https://gerrit.libreoffice.org/13374
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>